<resources>
    <string name="app_name">MarvelWorld</string>

    //Login Activity
    <string name="login_login_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_log_in_button_log_in">Log in</string>
    <string name="login_empty_field_error">Password can not be empty!</string>
    <string name="login_email_error">Email is not valid!</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marvel World</string>
    <string name="nav_header_subtitle">Everything</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_characters">Characters</string>
    <string name="menu_comics">Comics</string>
    <string name="menu_creators">Creators</string>
    <string name="menu_events">Events</string>
    <string name="menu_series">Series</string>
    <string name="menu_stories">Stories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>

</resources>
