<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_characters"
        android:icon="@drawable/characters"
        android:title="@string/menu_characters" />
    <item
        android:id="@+id/nav_comics"
        android:icon="@drawable/comics"
        android:title="@string/menu_comics" />
    <item
        android:id="@+id/nav_creators"
        android:icon="@drawable/creators"
        android:title="@string/menu_creators" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/events"
        android:title="@string/menu_events" />
    <item
        android:id="@+id/nav_series"
        android:icon="@drawable/series"
        android:title="@string/menu_series" />
    <item
        android:id="@+id/nav_stories"
        android:icon="@drawable/stories"
        android:title="@string/menu_stories" />
</menu>
