<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.marvelworld.vm.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".activity.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_layout"
            style="@style/TextInputLayoutStyle"
            errorText="@{safeUnbox(viewModel.loginValidation) ? null : @string/login_email_error}"
            android:layout_marginTop="250dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_login_hint"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.loginInput}"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/TextInputLayoutStyle"
            errorText="@{safeUnbox(viewModel.passwordValidation) ? null : @string/login_empty_field_error}"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:text="@={viewModel.passwordInput}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_log_in_button_left_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/login_log_in_button_right_margin"
            android:onClick="@{() -> viewModel.logIn()}"
            android:text="@string/login_log_in_button_log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>